Added daily analytic endpoint for graphs